fix: reserve space when scrollbar apears

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -35,6 +35,11 @@
 }
 
 /* Global layout */
+
+html {
+  scrollbar-gutter: stable;
+}
+
 html,
 body {
   height: 100%;
